cluster/apps/home/home-assistant/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-ingress
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.${SECRET_CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: home-assistant
          namespace: home
          port: 8123
          scheme: http
  tls:
    secretName: ingress-homeassistant-certificate
---
